# src/api/service/searchService.js
@@ -1,4 +1,4 @@
-const { SUPER_ADMIN } = require("../constants/roles.const.js");
+const { SUPER_ADMIN, PATIENT } = require("../constants/roles.const.js");
 const { Users, Roles } = require("../models/index.js");
 const bcryptService = require("../utils/bcrypt.js");
 const { Op } = require("sequelize");
@@ -9,48 +9,40 @@ const attributes = {
   exclude: ["password", "createdAt", "updatedAt"],
 };
 
-const searchByKeywords = async (req) => {
-  const user_first_name = req.query.user_first_name || false;
-  const user_last_name = req.query.user_last_name || false;
-  const user_phone_number = req.query.user_phone_number || false;
-  const user_id_number = req.query.user_id_number || false;
+const searchUserByKeywords = async (req) => {
+  const key_words = req.query.key_words || false;
+  const hospital_id = req.headers.hospital_id || false;
+  const role_id_requester = req.headers.role_id || false;
+  const role_id = req.query.role_id || false;
+  console.log(req.headers);
 
   let where = {};
 
-  if (user_first_name) {
-    where.first_name = {
-      [Op.like]: `%${user_first_name}%`,
-    };
-  } else if (user_last_name) {
-    where.last_name = {
-      [Op.like]: `%${user_last_name}%`,
-    };
-  } else if (user_phone_number) {
-    where.phone_number = {
-      [Op.like]: `%${user_phone_number}%`,
-    };
-  } else if (user_id_number) {
-    where.id_number = {
-      [Op.like]: `%${user_id_number}%`,
-    };
+  if (key_words) {
+    where[Op.or] = [
+      { first_name: { [Op.like]: `%${key_words}%` } },
+      { last_name: { [Op.like]: `%${key_words}%` } },
+      { id_number: { [Op.like]: `%${key_words}%` } },
+      { phone_number: { [Op.like]: `%${key_words}%` } },
+    ];
   }
 
-  if (
-    user_first_name ||
-    user_last_name ||
-    user_phone_number ||
-    user_id_number
-  ) {
-    return await Users.findAll({
-      where,
-      attributes: {
-        exclude: ["doctor_id", "patient_id", "admin_id", "password"],
-      },
-    });
+  if (role_id_requester !== SUPER_ADMIN) {
+    if (role_id !== PATIENT) {
+      //IF NOT LOOKING FOR PATIENT, THEN ONLY SHOW IT OWNS HOSPITAL USER LIST
+      where.hospital_id = hospital_id;
+    }
+    where.role_id = role_id;
   }
-  return [];
+
+  return await Users.findAll({
+    where,
+    attributes: {
+      exclude: ["doctor_id", "patient_id", "admin_id", "password"],
+    },
+  });
 };
 
 module.exports = {
-  searchByKeywords,
+  searchUserByKeywords,
 };
