# src/config/apidocs.json
@@ -617,7 +617,7 @@
                 }
             }
 		},
-		"/api/search": {
+		"/api/search/user": {
 			"get": {
 				"tags": ["Search"],
 				"summary": "Search entity by keywords",
@@ -628,36 +628,20 @@
                 ],
                 "parameters": [
                     {
-                        "name": "user_first_name",
+                        "name": "role_id",
                         "in": "query",
                         "schema": {
                             "type": "string"
                         },
-                        "description": "EX: user_first_name=pa"
+                        "description": "THIS IS A MUST, fill with role_id"
                     },
                     {
-                        "name": "user_last_name",
+                        "name": "key_words",
                         "in": "query",
                         "schema": {
                             "type": "string"
                         },
-                        "description": "EX: user_last_name=pa"
-                    },
-                    {
-                        "name": "user_phone_number",
-                        "in": "query",
-                        "schema": {
-                            "type": "string"
-                        },
-                        "description": "EX: user_phone_number=62"
-                    },
-                    {
-                        "name": "user_id_number",
-                        "in": "query",
-                        "schema": {
-                            "type": "string"
-                        },
-                        "description": "EX: user_id_number=X11"
+                        "description": "search by first_name,last_name, phone_Number or id_number"
                     }
                 ],
 				"responses": {
@@ -671,36 +655,7 @@
                         "description": "Not found"
                     }
                 }
-			},
-			"post": {
-                "tags": ["Schedules"],
-                "security": [
-                    {
-                        "bearer": []
-                    }
-                ],
-                "summary": "Add new Medicine-Treatments",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/ScheduleInput"
-							}
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            }
+			}
 		},
 		"/api/schedules/{id}": {
             "get": {
